<?xml version="1.0"?>
<package format="2">
    <name>invert_laser</name>
    <version>0.0.0</version>
    <description>The invert_laser package</description>

    <maintainer email="tim.kambic12@gmail.com">Tim</maintainer>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

